testing some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ ul li {
 
 #welcome-text {
     float: left;
-    margin-left: 10%;
+    margin-left: 7%;
     margin-right: 10%;
     width: 80%;
     font-size: 20px;
